# stable-matching

./: CMakeLists.txt  README
cmake/: FindYamlCpp.cmake
src/: CMakeLists.txt  entity.cxx  entity.h  main.cxx
test/: CMakeLists.txt  test.cxx
test/contrib/: CMakeLists.txt
